--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,17 @@
+/* ==========================================================================
+Global
+========================================================================== */
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: #5a5a5a;
+  position: relative;
+}
+html, body {
+     width: 100%;
+     overflow-x: hidden;
 }
 .container {
   max-width: 960px;
@@ -84,3 +94,76 @@ body {
 }
 
 .overflow-hidden { overflow: hidden; }
+
+header {
+  height: 80px;
+}
+
+/* ==========================================================================
+Navbar
+========================================================================== */
+.bg-dark {
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+.navbar-brand {
+    font-family: Rockwell;
+    font-size: 25px !important;
+}
+.navbar {
+    padding: 0 !important;
+    height: 80px;
+}
+.collapse, .dropdown-menu {
+    font-size: 18px;
+}
+.transparent {
+  background-color:rgba(0,0,0,0) !important;
+}
+.navbar-brand {
+    font-weight: 900;
+}
+nav .navbar-right a.nav-link {
+    background-color: transparent !important;
+}
+span.navbar-toggler-icon {
+    font-size: 20px;
+}
+#navbarCollapse {
+    clear: both;
+}
+nav {
+  @media (min-width: 768px){
+    .vcenter {
+      padding-top:1em;
+    }
+    form {
+      max-width: 30%;
+    }
+  }
+  .dropdown-toggle::after {
+    display:none
+  }
+  @media (max-width: 767px) {
+    .navbar-collapse {
+      background-color: rgba(0, 0, 0, 0.85);
+      margin-top: 25px;
+    }
+  }
+}
+
+/* ==========================================================================
+Footer
+========================================================================== */
+footer {
+  .copyright {
+      margin-bottom: .5rem!important;
+      margin-top: 1rem!important;
+  }
+  .privacy {
+    margin-right: 1.5em;
+  }
+  .top {
+    padding-left:5px;
+  }
+}
