--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -72,6 +72,9 @@ Team
     img.rounded-circle.img-fluid {
         max-height: 250px;
     }
+    .card {
+        background-color: #4b3181;
+    }
 }
 
 /* ==========================================================================
@@ -98,56 +101,6 @@ About
 ========================================================================== */
 
 .about {
-
-    .blog-header {
-    line-height: 1;
-    border-bottom: 1px solid #e5e5e5;
-    }
-
-    .blog-header-logo {
-    font-size: 2.25rem;
-    }
-
-    .blog-header-logo:hover {
-    text-decoration: none;
-    }
-
-    .display-4 {
-    font-size: 2.5rem;
-    }
-    @media (min-width: 768px) {
-    .display-4 {
-        font-size: 3rem;
-    }
-    }
-
-    .nav-scroller {
-    position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden;
-    }
-
-    .nav-scroller .nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-    }
-
-    .nav-scroller .nav-link {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    font-size: .875rem;
-    }
-
     .card-img-right {
     height: 100%;
     border-radius: 0 3px 3px 0;
@@ -188,14 +141,6 @@ About
     }
     }
 
-    /* Pagination */
-    .blog-pagination {
-    margin-bottom: 4rem;
-    }
-    .blog-pagination > .btn {
-    border-radius: 2rem;
-    }
-
     /*
     * Blog posts
     */
@@ -209,20 +154,6 @@ About
     .blog-post-meta {
     margin-bottom: 1.25rem;
     color: #999;
-    }
-
-    /*
-    * Footer
-    */
-    .blog-footer {
-    padding: 2.5rem 0;
-    color: #999;
-    text-align: center;
-    background-color: #f9f9f9;
-    border-top: .05rem solid #e5e5e5;
-    }
-    .blog-footer p:last-child {
-    margin-bottom: 0;
     }
 }
 
