Minor styling and bug fixes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -171,8 +171,9 @@ Header
 .jumbotron {
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
   padding-top:100px !important;
-  height: 375px;
 }
 
 /* ==========================================================================
