--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -63,10 +63,9 @@ Home
             position: relative;
             z-index: 3;
         }
-    }
-    
+    }  
 
-    /* first section */
+    /* Intro Section */
     .page-section {
         margin-top: 5rem;
         margin-bottom: 5rem;
@@ -109,7 +108,7 @@ Home
         bottom: -2rem;
     }
 
-    /* teal section */
+    /* Promise Section */
     .cta {
         padding-top: 5rem;
         padding-bottom: 5rem;
@@ -131,7 +130,7 @@ Home
         border: 0.25rem solid rgba(255, 255, 255, 0.85);
     }
 
-    /* web/mobile section */
+    /* Applications Section */
     img.inherit {
         height: inherit;
     }
@@ -206,7 +205,7 @@ Home
         }
     }
 
-    /* Founders section */
+    /* Founders Section */
     .col-lg-4 {
         margin-bottom: 1.5rem;
         text-align: center;
