--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -318,41 +318,15 @@ About
 
 
     /* Blog */
+    .border-top { 
+        border-top: 1px solid #e5e5e5; 
+    }
     @media(max-width:$breakpoint-sm){
         .services{
             margin-left:-30px;
             margin-right:-30px;
         }
     }
-    .blog-title {
-        margin-bottom: 0;
-        font-size: 2rem;
-        font-weight: 400;
-    }
-    .blog-description {
-        font-size: 1.1rem;
-        color: #999;
-    }
-
-    @media (min-width: 40em) {
-        .blog-title {
-            font-size: 3.5rem;
-        }
-    }
-
-    .blog-post {
-        margin-bottom: 4rem;
-    }
-    .blog-post-title {
-        margin-bottom: .25rem;
-        font-size: 2.5rem;
-    }
-    .blog-post-meta {
-        margin-bottom: 1.25rem;
-        color: #999;
-    }
-    .border-top { border-top: 1px solid #e5e5e5; }
-    .border-bottom { border-bottom: 1px solid #e5e5e5; }
 
 
     /* Timeline */
