--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -61,8 +61,7 @@ Home
         animation-duration: 2s;
     }
     .btn-outline-secondary:hover {
-        background: transparent;
-        color: #6c757d;
+        background: #4b3181;
     }
     
     @media(min-width: $breakpoint-sm){
