--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@ body {
 html, body {
      width: 100%;
      overflow-x: hidden;
+     background: rgba(0, 0, 0, 0.85);
 }
 .container {
   max-width: 960px;
