--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -201,8 +201,8 @@ Home
     }
     .portfolio-item .caption .caption-content {
         transition: opacity 0.25s;
-        margin-left: 5rem !important;
-        margin-right: 5rem !important;
+        margin-left: 20% !important;
+        margin-right: 20% !important;
     }
 
     @media (min-width: $breakpoint-sm) {
