--- a/src/styles/Fontawesome.scss
+++ b/src/styles/Fontawesome.scss
@@ -22,11 +22,7 @@
   color: white;
 }
 .fa-envelope {
-  background: #bb0000;
-  color: white;
-}
-.fa-phone {
-  background: #125688;
+  background: #3B5998;
   color: white;
 }
 .fa-bars {
