--- a/src/styles/Fontawesome.scss
+++ b/src/styles/Fontawesome.scss
@@ -32,3 +32,17 @@
   background: #125688;
   color: white;
 }
+.fa-chevron-circle-down {
+  width: 55px;
+  margin: 0px;
+  padding-top: 0px;
+}
+.fa-sort-down {
+  width: 55px;
+  margin: 0px;
+  padding-top: 0px;
+  line-height: 2px !important;
+}
+.fa-sort-down:hover {
+  opacity: 1;
+}
