--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -316,6 +316,9 @@ Portfolio
     a:hover {
         text-decoration: none;
     }
+    .logo img:hover {
+        opacity: .7;
+    }
 
     /* Slideshow */
     .slideshow {
