Update protfolio and about us

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -454,6 +454,9 @@ About
         -vendor-animation-delay: .6s;
         animation-delay: .6s;
     }
+    .firebase {
+        max-height: 225px;
+    }
 
 
     /* Blog */
