--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -538,7 +538,7 @@ About
         color: white;
         border: 7px solid #e9ecef;
         border-radius: 100%;
-        background-color: #fed136;
+        background-color: #17a2b8;
     }
 
     .timeline > li .timeline-image h4 {
